--- a/latest/.gitlab-ci.yml
+++ b/latest/.gitlab-ci.yml
@@ -28,8 +28,8 @@ variables:
     find . -type f -not -path "./vendor/*" -exec chmod 664 {} \;
     find . -type d -not -path "./vendor/*" -exec chmod 775 {} \;
 
-.install_phpredis: &install_phpredis |
-    docker-php-ext-enable redis
+.install_php_extensions: &install_php_extensions |
+    docker-php-ext-enable redis soap
 
 
 composer:
@@ -39,7 +39,7 @@ composer:
         paths:
             - vendor/
     script:
-        - *install_phpredis
+        - *install_php_extensions
         - composer install --prefer-dist --no-interaction --no-progress --no-scripts --no-suggest
         - cp .env.testing .env
         - php artisan key:generate
@@ -79,6 +79,6 @@ production:
         - release
     script:
         - *init_ssh
-        - *install_phpredis
+        - *install_php_extensions
         - *change_file_permissions
         - php artisan deploy -vvv --revision=$CI_COMMIT_SHA
