Fixed php-soap installing

--- a/7.1/Dockerfile
+++ b/7.1/Dockerfile
@@ -5,9 +5,11 @@ USER root
 
 
 ###########################################################################
-# PHP REDIS EXTENSION
+# PHP EXTENSIONS
 ###########################################################################
 
 RUN apk add --update redis autoconf \
-	&& pecl install -o -f redis soap \
+	&& pecl install -o -f redis \
 	&&  rm -rf /tmp/pear
+
+RUN apt-get install php-soap
