Trying to install php-soap

--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -12,4 +12,9 @@ RUN apk add --update redis autoconf \
 	&& pecl install -o -f redis \
 	&&  rm -rf /tmp/pear
 
-RUN apt-get install php-soap
+
+# php-soap extension
+RUN apk add --update php-soap
+
+RUN docker-php-ext-install \
+    soap
