Fixed `configure: error: libxml2 not found. Please check your libxml2 installation.`

--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -8,6 +8,8 @@ USER root
 # PHP EXTENSIONS
 ###########################################################################
 
+RUN apk add libxml2-dev
+
 RUN apk add --update redis autoconf \
 	&& pecl install -o -f redis \
 	&& rm -rf /tmp/pear
