--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -9,13 +9,14 @@ USER root
 ###########################################################################
 
 # Add repos
-RUN apk add curl \
+RUN apk add curl --no-cache \
     && curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash - \
     && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - \
     && echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
     
 # Install packages
-RUN apk add nodejs yarn
+RUN apk add --no-cache \
+    nodejs yarn
 
 
 
