--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -1,22 +1,76 @@
-FROM lorisleiva/laravel-docker:7.3
+FROM php:7.3-alpine
 
-# Start as root
-USER root
+# Install dev dependencies
+RUN apk add --no-cache --virtual .build-deps \
+    $PHPIZE_DEPS \
+    curl-dev \
+    imagemagick-dev \
+    libtool \
+    libxml2-dev \
+    postgresql-dev \
+    sqlite-dev
 
+# Install production dependencies
+RUN apk add --no-cache \
+    bash \
+    curl \
+    g++ \
+    gcc \
+    git \
+    imagemagick \
+    libc-dev \
+    libpng-dev \
+    make \
+    mysql-client \
+    openssh-client \
+    postgresql-libs \
+    rsync \
+    zlib-dev \
+    libzip-dev
 
-###########################################################################
-# PHP EXTENSIONS
-###########################################################################
+# Install PECL and PEAR extensions
+RUN pecl install \
+    imagick \
+    xdebug
 
-RUN apk add libxml2-dev
-
+# Install REDIS extension
 RUN apk add --update redis autoconf \
 	&& pecl install -o -f redis \
 	&& rm -rf /tmp/pear
 
-
-# php-soap extension
+# Install and enable php extensions
 RUN apk add --update php-soap
-
+RUN docker-php-ext-enable \
+    imagick \
+    xdebug
+RUN docker-php-ext-configure zip --with-libzip
 RUN docker-php-ext-install \
+    curl \
+    iconv \
+    mbstring \
+    pdo \
+    pdo_mysql \
+    pdo_pgsql \
+    pdo_sqlite \
+    pcntl \
+    tokenizer \
+    xml \
+    gd \
+    zip \
+    bcmath \
     soap
+
+# Install composer
+ENV COMPOSER_HOME /composer
+ENV PATH ./vendor/bin:/composer/vendor/bin:$PATH
+ENV COMPOSER_ALLOW_SUPERUSER 1
+RUN curl -s https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
+
+# Install PHP_CodeSniffer
+RUN composer global require "squizlabs/php_codesniffer=*" "hirak/prestissimo"
+
+# Cleanup dev dependencies
+RUN apk del -f .build-deps
+
+# Setup working directory
+WORKDIR /var/www
