--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -1,4 +1,16 @@
+########################################
+# Install nodejs and yarn
+########################################
+
 FROM node:latest
+
+CMD [ "node" ]
+
+
+########################################
+# Install main container
+########################################
+
 FROM php:alpine
 
 
