Rollback to the `1.1.1` version with lorisleiva/laravel-docker:latest

--- a/7.1/.gitlab-ci.yml
+++ b/7.1/.gitlab-ci.yml
@@ -3,7 +3,6 @@ image: helldar/laravel-gitlab-ci:7.1
 services:
     - mysql:5.7
     - redis:latest
-    - node:latest
 
 variables:
     APP_NAME: "${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}"
@@ -40,7 +39,6 @@ composer:
         paths:
             - vendor/
     script:
-        - *init_ssh
         - *install_php_extensions
         - composer install --prefer-dist --no-interaction --no-progress --no-scripts --no-suggest
         - cp .env.testing .env
@@ -80,5 +78,7 @@ production:
     only:
         - release
     script:
+        - *init_ssh
+        - *install_php_extensions
         - *change_file_permissions
         - php artisan deploy -vvv --revision=$CI_COMMIT_SHA
