Added php-sockets extension

--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -20,3 +20,7 @@ RUN apk add --update php-soap
 
 RUN docker-php-ext-install \
     soap
+
+# php extensions
+RUN docker-php-ext-install \
+    sockets
