--- a/stable/.gitlab-ci.yml
+++ b/stable/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: helldar/laravel-gitlab-ci:stable
 
 services:
     - mysql:5.7
+    - redis:latest
 
 variables:
     APP_NAME: "${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}"
