Added json php extension

--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -71,7 +71,8 @@ RUN docker-php-ext-install \
     zip \
     bcmath \
     soap \
-    sockets
+    sockets \
+    json
 
 # Install composer
 ENV COMPOSER_HOME /composer
