--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 
         strategy:
             matrix:
-                php_version: [ 7.2.34, 7.3.24, 7.4.12, 8.0.0RC3, latest ]
+                php_version: [ 7.2.34, 7.3.24, 7.4.12, latest ]
 
         steps:
             -   name: Checkout
