--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,21 +20,6 @@ jobs:
             -   name: Checkout
                 uses: actions/checkout@v2
 
-            -   name: Set up QEMU
-                uses: docker/setup-qemu-action@v1
-                with:
-                    platforms: linux/amd64,linux/386
-
-            -   name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v1
-                id: buildx
-                with:
-                    version: latest
-                    install: true
-
-            -   name: Available platforms
-                run: echo ${{ steps.buildx.outputs.platforms }}
-
             -   name: Get the version
                 id: get_version
                 run: |
@@ -70,7 +55,7 @@ jobs:
                     echo ::set-output name=minor_version::${MINOR_VERSION}
                     echo ::set-output name=patch_version::${PATCH_VERSION}
 
-                    echo ::set-output name=buildx_args_latest::--platform ${{ steps.buildx.outputs.platforms }} \
+                    echo ::set-output name=build_args_latest::\
                         --build-arg VERSION=${{ steps.get_version.outputs.prefix }} \
                         --build-arg MINOR_PHP_VERSION=latest \
                         --build-arg FULL_PHP_VERSION=latest \
@@ -78,7 +63,7 @@ jobs:
                         --build-arg VCS_REF=${GITHUB_SHA::8} \
                         --tag "${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}" .
 
-                    echo ::set-output name=buildx_args_minor::--platform ${{ steps.buildx.outputs.platforms }} \
+                    echo ::set-output name=build_args_minor::\
                         --build-arg VERSION=${{ steps.get_version.outputs.prefix }}-${MINOR_VERSION} \
                         --build-arg MINOR_PHP_VERSION=${MINOR_VERSION} \
                         --build-arg FULL_PHP_VERSION=${MINOR_VERSION}${{ steps.get_version.outputs.suffix }} \
@@ -86,7 +71,7 @@ jobs:
                         --build-arg VCS_REF=${GITHUB_SHA::8} \
                         --tag "${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}-${MINOR_VERSION}" .
 
-                    echo ::set-output name=buildx_args_patch::--platform ${{ steps.buildx.outputs.platforms }} \
+                    echo ::set-output name=build_args_patch::\
                         --build-arg VERSION=${{ steps.get_version.outputs.prefix }}-${PATCH_VERSION} \
                         --build-arg MINOR_PHP_VERSION=${MINOR_VERSION} \
                         --build-arg FULL_PHP_VERSION=${PATCH_VERSION}${{ steps.get_version.outputs.suffix }} \
@@ -94,17 +79,17 @@ jobs:
                         --build-arg VCS_REF=${GITHUB_SHA::8} \
                         --tag "${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}-${PATCH_VERSION}" .
 
-            -   name: Docker Buildx (build latest)
+            -   name: Docker Build (build latest)
                 if: success() && matrix.php_version == 'latest'
-                run: docker build --output "type=image,push=false,name=${{ steps.get_version.outputs.prefix }}" ${{ steps.prepare.outputs.buildx_args_latest }}
+                run: docker build --output "type=image,push=false,name=${{ steps.get_version.outputs.prefix }}" ${{ steps.prepare.outputs.build_args_latest }}
 
-            -   name: Docker Buildx (build minor tag)
+            -   name: Docker Build (build minor tag)
                 if: success() && matrix.php_version != 'latest'
-                run: docker build --output "type=image,push=false,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.minor_version }}" ${{ steps.prepare.outputs.buildx_args_minor }}
+                run: docker build --output "type=image,push=false,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.minor_version }}" ${{ steps.prepare.outputs.build_args_minor }}
 
-            -   name: Docker Buildx (build patch tag)
+            -   name: Docker Build (build patch tag)
                 if: success() && matrix.php_version != 'latest'
-                run: docker build --output "type=image,push=false,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.patch_version }}" ${{ steps.prepare.outputs.buildx_args_patch }}
+                run: docker build --output "type=image,push=false,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.patch_version }}" ${{ steps.prepare.outputs.build_args_patch }}
 
             -   name: Login to DockerHub
                 if: success()
@@ -113,26 +98,26 @@ jobs:
                     username: ${{ secrets.DOCKER_HUB_USER }}
                     password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-            -   name: Docker Buildx (push latest)
+            -   name: Docker Build (push latest)
                 if: success() && matrix.php_version == 'latest'
-                run: docker build --output "type=image,push=true,name=${{ steps.get_version.outputs.prefix }}" ${{ steps.prepare.outputs.buildx_args_latest }}
+                run: docker build --output "type=image,push=true,name=${{ steps.get_version.outputs.prefix }}" ${{ steps.prepare.outputs.build_args_latest }}
 
-            -   name: Docker Buildx (push minor tag)
+            -   name: Docker Build (push minor tag)
                 if: success() && matrix.php_version != 'latest'
-                run: docker build --output "type=image,push=true,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.minor_version }}" ${{ steps.prepare.outputs.buildx_args_minor }}
+                run: docker build --output "type=image,push=true,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.minor_version }}" ${{ steps.prepare.outputs.build_args_minor }}
 
-            -   name: Docker Buildx (push patch tag)
+            -   name: Docker Build (push patch tag)
                 if: success() && matrix.php_version != 'latest'
-                run: docker build --output "type=image,push=true,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.patch_version }}" ${{ steps.prepare.outputs.buildx_args_patch }}
+                run: docker build --output "type=image,push=true,name=${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.patch_version }}" ${{ steps.prepare.outputs.build_args_patch }}
 
             -   name: Inspect latest image
                 if: success() && matrix.php_version == 'latest'
-                run: docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}
+                run: docker build imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}
 
             -   name: Inspect minor tag image
                 if: success() && matrix.php_version != 'latest'
-                run: docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.minor_version }}
+                run: docker build imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.minor_version }}
 
             -   name: Inspect patch tag image
                 if: success() && matrix.php_version != 'latest'
-                run: docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.patch_version }}
+                run: docker build imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.patch_version }}
