--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,9 @@ jobs:
             -   name: Checkout
                 uses: actions/checkout@v2
 
+            -   name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v1
+
             -   name: Get the version
                 id: get_version
                 run: |
