--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,3 +120,24 @@ jobs:
             -   name: Inspect (patch)
                 if: success() && matrix.php_version != 'latest'
                 run: docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.get_version.outputs.prefix }}-${{ steps.prepare.outputs.patch_version }}
+
+            -   name: Update repo description
+                uses: peter-evans/dockerhub-description@v2
+                with:
+                    username: ${{ secrets.DOCKERHUB_USERNAME }}
+                    password: ${{ secrets.DOCKERHUB_TOKEN }}
+                    repository: ${{ steps.prepare.outputs.docker_image }}
+
+    description:
+        runs-on: ubuntu-latest
+
+        steps:
+            -   name: Checkout
+                uses: actions/checkout@v2
+
+            -   name: Update repo description
+                uses: peter-evans/dockerhub-description@v2
+                with:
+                    username: ${{ secrets.DOCKERHUB_USERNAME }}
+                    password: ${{ secrets.DOCKERHUB_TOKEN }}
+                    repository: helldar/laravel-gitlab-ci
